<resources>

    <!--
    Entry Page
    -->
    <string name="Log_In_Button_Text">Log In</string>
    <string name="Sign_Up_Button_Text">Sign Up</string>
    <string name="Skip_Log_In_Text">Continue without logging in</string>

    <!--
    Registration Page
    -->
    <string name="app_name">IntlCard</string>
    <string name="Email_Address_Hint">Email Address</string>
    <string name="Password_Hint">Password</string>
    <string name="Confirm_Password_Hint">Confirm Password</string>
    <string name="Register_Button_Text">Register</string>

    <!--
    Card Set Overview Page
    -->
    <string name="Add_Card_Set_Button_Text">Add Set</string>


    <!--
    Cards Overview Page
    -->
    <string name="Add_Card_Button_Text">Add Card</string>
    <string name="Learn_Button_Text">Learn</string>

    <!--
   Add Card Set Page
   -->
    <string name="Target_Hint_Text">Word/Sentence</string>
    <string name="Translation_Hint_Text">Translation</string>
    <string name="Comment_Hint_Text">Comment</string>
    <string name="Create_Card_Set_Btn_Text">Create</string>

    <!--
    Languages array for spinner
    -->
    <string-array name="languages_array">
        <item>English</item>
        <item>Russian</item>
        <item>Portuguese</item>
        <item>Spanish</item>
        <item>French</item>
        <item>Mandarin</item>
    </string-array>

</resources>