<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewModel"
            type="com.konstantink.intlcard.presentation.viewmodels.CardSetViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageButton
            android:id="@+id/idCloseAddCarSetPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_close"

            />

        <TextView
            android:id="@+id/idLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="33dp"
            android:layout_marginTop="106dp"
            android:text="@string/app_name"
            android:textSize="56sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="85dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_swap" />

            <Spinner
                android:id="@+id/spinner_target"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <EditText
            android:id="@+id/idContextText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_rounded_variants"
            android:hint="@string/Comment_Hint_Text"
            android:inputType="text"
            android:textSize="35sp" />


        <Button
            android:id="@+id/idSubmitCardSetBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_rounded_variants"
            android:text="@string/Create_Card_Set_Btn_Text"
            android:textSize="35sp" />

    </LinearLayout>
</layout>